--- a/web/components/Select/Select.module.scss
+++ b/web/components/Select/Select.module.scss
@@ -12,6 +12,7 @@
     justify-content: space-between;
     gap: 10px;
     padding: 3px 8px;
+    height: 100%;
     .label {
       white-space: nowrap;
       overflow-x: hidden;
