--- a/web/pages/lines/[abbreviation].module.scss
+++ b/web/pages/lines/[abbreviation].module.scss
@@ -43,6 +43,7 @@
         font-weight: 400;
         font-size: 1.375rem;
         margin-bottom: 2px;
+        letter-spacing: 2px;
         .highlight {
           font-weight: 800;
         }
