--- a/web/components/LineCombinations/Line/Line.module.scss
+++ b/web/components/LineCombinations/Line/Line.module.scss
@@ -67,6 +67,7 @@
       .playerCardWrapper {
         border: 2px solid white;
         flex: 1;
+        width: 164px;
         &::after {
           display: none;
         }
