--- a/web/components/GameGrid/Toggle/Toggle.module.css
+++ b/web/components/GameGrid/Toggle/Toggle.module.css
@@ -1,8 +1,8 @@
 .switch {
   position: relative;
   display: inline-block;
-  width: 40px;
-  height: 20px;
+  width: 30px;
+  height: 15px;
 }
 
 .switch input {
@@ -18,7 +18,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ccc;
+  background-color: #07aae2;
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
@@ -26,17 +26,19 @@
 .slider:before {
   position: absolute;
   content: "";
-  height: 12px;
-  width: 12px;
-  left: 4px;
-  bottom: 3.8px;
+  height: 10px;
+  width: 10px;
+  left: 2.5px;
+  bottom: 2.5px;
   background-color: white;
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
 
+
+
 input:checked + .slider {
-  background-color: #2196f3;
+  background-color: #404040;
 }
 
 input:focus + .slider {
@@ -44,9 +46,9 @@ input:focus + .slider {
 }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(20px);
-  -ms-transform: translateX(20px);
-  transform: translateX(20px);
+  -webkit-transform: translateX(15px);
+  -ms-transform: translateX(15px);
+  transform: translateX(15px);
 }
 
 /* Rounded sliders */
@@ -56,4 +58,33 @@ input:checked + .slider:before {
 
 .slider.round:before {
   border-radius: 50%;
+}
+
+/* Existing CSS rules... */
+
+@media (max-width: 480px) {
+  .switch {
+
+    width: 15px; /* Half of the original width */
+    height: 7.5px; /* Half of the original height */
+  }
+
+  .slider {
+    background-color: #07aae2;  
+    color: #FFF;
+  }
+
+  .slider:before {
+    background-color: #FFF;
+    height: 5px; /* Half of the original height */
+    width: 5px; /* Half of the original width */
+    left: 1.25px; /* Adjusted to maintain the layout */
+    bottom: 1.25px; /* Adjusted to maintain the layout */
+  }
+
+  input:checked + .slider:before {
+    -webkit-transform: translateX(7.5px); /* Half of the original transform */
+    -ms-transform: translateX(7.5px); /* Half of the original transform */
+    transform: translateX(7.5px); /* Half of the original transform */
+  }
 }
