--- a/web/components/GameGrid/GameGrid.module.scss
+++ b/web/components/GameGrid/GameGrid.module.scss
@@ -417,3 +417,162 @@
       }
   }
 }
+
+@media (max-width: 320px) {
+  .dateButtonPrev {
+    font-family: roboto condensed, sans-serif;
+    position: relative;
+    height: 20px;
+    width: 60px;
+    background: #07aae2;
+    color: #ffffff;
+    border: 1px solid white;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 6px;
+  }
+
+  .dateButtonPrev:hover {
+    font-family: roboto condensed, sans-serif;
+    position: relative;
+    height: 20px;
+    width: 60px;
+    background: #07aae2;
+    color: #ffffff;
+    border: 1px solid white;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 6px;
+    filter: brightness(120%);
+  }
+  
+  .dateButtonNext {
+    font-family: roboto condensed, sans-serif;
+    position: relative;
+    height: 20px;
+    width: 60px;
+    background: #07aae2;
+    color: #ffffff;
+    border: 1px solid white;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 6px;
+  }
+
+  .dateButtonNext:hover {
+    font-family: roboto condensed, sans-serif;
+    position: relative;
+    height: 20px;
+    width: 60px;
+    background: #07aae2;
+    color: #ffffff;
+    border: 1px solid white;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 6px;
+    filter: brightness(120%);
+  }
+
+  .scheduleGrid {
+      width: 100%;
+      border: 2px solid white;
+      border-radius: 0;
+      overflow-x: scroll;
+  }
+
+  .scheduleGrid tr {
+    height: 35px;
+  }
+
+  .gridWrapper {
+    width: 100%;
+    margin-top: 20px;
+  }
+
+  .totalGamesPerDayRow {
+    border-bottom: .5px solid white;
+  }
+  
+  .scheduleGrid th {
+      font-family: roboto condensed, sans-serif;
+      position: relative;
+  }
+  
+  .scheduleGrid tr th:first-child,
+  .scheduleGrid tr td:first-child {
+      text-align: center;
+      max-width: 40px;
+      min-width: 30px;
+      font-size: 10px;
+      border-right: 3px solid #07aae2;
+      padding-left: 4px !important;
+  }
+
+  
+  .scheduleGrid tr th:nth-child(n + 2),
+  .scheduleGrid td:nth-child(n + 2) {
+      font-family: roboto condensed, sans-serif;
+      padding: 2px 2px;
+      min-width: 25px;
+      max-width: 30px;
+      text-align: center;
+      font-size: 8px;
+  }
+
+  .scheduleGrid tr th:nth-child(9),
+  .scheduleGrid tr td:nth-child(9) {
+      border-left: 3px solid #07aae2;
+  }
+
+  .scheduleGrid tr th:nth-child(9),
+  .scheduleGrid tr th:nth-child(10),
+  .scheduleGrid tr td:nth-child(9),
+  .scheduleGrid tr td:nth-child(10) {
+    border-right: 1px solid white;
+    border-bottom: 1px solid white;
+  }
+
+  .scoreAndHomeAway {
+    display: none;
+  }
+  
+  .homeAway {
+    display: none;
+  }
+
+  .hideOnMobile {
+    display: none;
+  }
+
+  /* MAGGIE <3 */
+
+  .mobileLogoSize {
+    padding: 1px !important;
+    width: 20px;
+    height: 20px !important;
+  }
+
+  .mobileFontStyle {
+    font-family: 'Roboto Condensed', sans-serif !important;
+    font-size: 7px !important;
+  }
+  
+  .score {
+    display: none;
+  }
+  
+  .totalGamesPerDayCell {
+      background-color: #000;
+      color: white;
+  }
+  
+  .totalGamesPerDayRow > .title::before {
+      content: "GP/Day";
+  }
+  
+  .teamRow {
+      .teamName {
+      display: none;
+      }
+  }
+}
