--- a/web/components/Banner/Banner.module.scss
+++ b/web/components/Banner/Banner.module.scss
@@ -54,3 +54,14 @@
 
   }
 }
+
+@media screen and (orientation:landscape) /* LANDSCAPE */
+and (min-device-width: 479px) 
+and (max-device-width: 932px) {
+
+  .textBanner {
+    font-family: roboto condensed, sans-serif;
+    border-bottom: 4px solid white;
+
+  }
+}
