--- a/web/components/GameGrid/GameGrid.module.scss
+++ b/web/components/GameGrid/GameGrid.module.scss
@@ -84,7 +84,7 @@
 .scheduleGrid tr td:first-child {
   height: 12px;
   border-collapse: collapse;
-  width: 185px;
+  width: 60px;
   border-right: 5px solid #07aae2;
   text-align: left;
   padding: 10px;
@@ -98,14 +98,17 @@
   text-align: left;
   font-family: roboto condensed, sans-serif;
   font-size: 14px;
-  height: 20px;
+  height: 60px;
 }
 
 .scheduleGrid th:nth-child(n + 2),
 .scheduleGrid td:nth-child(n + 2) {
-  padding: 6px 10px;
+  padding: 3px 5px;
   border: .5px solid white;
-  min-width: 85px;
+  min-width: 60px;
+  max-width: 100px;
+  max-height: 40px;
+  min-height: 40px;
   text-align: center;
 }
 
@@ -113,6 +116,12 @@
 .scheduleGrid tr td:nth-child(10),
 .scheduleGrid tr td:nth-child(11) {
     background-color: #101010; /* Set the background color */
+}
+
+.scheduleGrid tr th:nth-child(9),
+.scheduleGrid tr th:nth-child(10),
+.scheduleGrid tr th:nth-child(11) {
+  padding-bottom: 14px;
 }
 
 
@@ -142,6 +151,8 @@
   display: flex;
   flex-direction: column;
   margin-right: 4px;
+  margin: 0 auto;
+  justify-content: center;
 }
 
 .homeAway {
@@ -262,7 +273,7 @@
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 480px) { /* portrait */
 
   .dateButtonPrev {
     font-family: roboto condensed, sans-serif;
@@ -345,7 +356,7 @@
   
   .scheduleGrid tr th:first-child,
   .scheduleGrid tr td:first-child {
-      max-width: 50px;
+      max-width: 50px !important;
       min-width: 45px;
       font-size: 10px;
       border-right: 3px solid #07aae2;
@@ -363,16 +374,17 @@
   }
 
   .scheduleGrid tr th:nth-child(9),
-  .scheduleGrid tr td:nth-child(9) {
-      border-left: 3px solid #07aae2;
-  }
-
-  .scheduleGrid tr th:nth-child(9),
   .scheduleGrid tr th:nth-child(10),
   .scheduleGrid tr td:nth-child(9),
   .scheduleGrid tr td:nth-child(10) {
     border-right: 1px solid white;
     border-bottom: 1px solid white;
+  }
+
+  .scheduleGrid tr th:nth-child(9),
+  .scheduleGrid tr th:nth-child(10),
+  .scheduleGrid tr th:nth-child(11) {
+    padding-bottom: 8px;
   }
 
   .scoreAndHomeAway {
@@ -390,12 +402,12 @@
   /* MAGGIE <3 */
 
   .mobileLogoSize {
-    padding: 2px !important;
+    padding: 1.5px !important;
   }
 
   .mobileFontStyle {
     font-family: 'Roboto Condensed', sans-serif !important;
-    font-size: 7px !important;
+    font-size: 8px !important;
   }
   
   .score {
@@ -414,6 +426,169 @@
   .teamRow {
       .teamName {
       display: none;
+      }
+  }
+}
+
+@media screen and (orientation:landscape) /* LANDSCAPE maggie*/
+and (min-device-width: 479px) 
+and (max-device-width: 932px) {
+
+  .dateButtonPrev {
+    font-family: roboto condensed, sans-serif;
+    position: relative;
+    height: 30px;
+    width: 90px;
+    background: #07aae2;
+    color: #ffffff;
+    border: 1px solid white;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 6px;
+  }
+
+  .dateButtonPrev:hover {
+    font-family: roboto condensed, sans-serif;
+    position: relative;
+    height: 30px;
+    width: 90px;
+    background: #07aae2;
+    color: #ffffff;
+    border: 1px solid white;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 6px;
+    filter: brightness(120%);
+  }
+  
+  .dateButtonNext {
+    font-family: roboto condensed, sans-serif;
+    position: relative;
+    height: 30px;
+    width: 90px;
+    background: #07aae2;
+    color: #ffffff;
+    border: 1px solid white;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 6px;
+  }
+
+  .dateButtonNext:hover {
+    font-family: roboto condensed, sans-serif;
+    position: relative;
+    height: 30px;
+    width: 90px;
+    background: #07aae2;
+    color: #ffffff;
+    border: 1px solid white;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 6px;
+    filter: brightness(120%);
+  }
+
+  .scheduleGrid {
+      width: 100%;
+      border: 2px solid white;
+      border-radius: 0;
+      overflow-x: scroll;
+  }
+
+  .scheduleGrid tr {
+    height: 45px;
+  }
+
+  .gridWrapper {
+    width: 100%;
+    margin-top: 20px;
+  }
+
+  .totalGamesPerDayRow {
+    border-bottom: .5px solid white;
+  }
+  
+  .scheduleGrid th {
+      font-family: roboto condensed, sans-serif;
+      position: relative;
+  }
+  
+  .scheduleGrid tr th:first-child,
+  .scheduleGrid tr td:first-child {
+      max-width: 80px;
+      min-width: 45px;
+      font-size: 14px;
+      margin: auto;
+      border-right: 3px solid #07aae2;
+  }
+
+  
+  .scheduleGrid tr th:nth-child(n + 2),
+  .scheduleGrid td:nth-child(n + 2) {
+      font-family: roboto condensed, sans-serif;
+      padding: 2px 2px;
+      min-width: 30px;
+      max-width: 40px;
+      text-align: center;
+      font-size: 14px;
+      font-weight: 100;
+  }
+
+  .scheduleGrid tr th:nth-child(9),
+  .scheduleGrid tr td:nth-child(9) {
+      border-left: 3px solid #07aae2;
+  }
+
+  .scheduleGrid tr th:nth-child(9),
+  .scheduleGrid tr th:nth-child(10),
+  .scheduleGrid tr td:nth-child(9),
+  .scheduleGrid tr td:nth-child(10) {
+    border-right: 1px solid white;
+    border-bottom: 1px solid white;
+  }
+
+  .scoreAndHomeAway {
+    display: block;
+    margin: auto;
+    padding: 4px;
+  }
+  
+  .homeAway {
+    display: block;
+  }
+
+  .hideOnMobile {
+    display: block;
+    padding-right: 0px !important;
+  }
+
+  /* MAGGIE <3 */
+
+  .mobileLogoSize {
+    padding: 2px !important;
+  }
+
+  .mobileFontStyle {
+    font-family: 'Roboto Condensed', sans-serif !important;
+    font-size: 12px !important;
+  }
+  
+  .score {
+    display: block;
+  }
+  
+  .totalGamesPerDayCell {
+      background-color: #000;
+      color: white;
+  }
+  
+  .totalGamesPerDayRow > .title::before {
+      content: "GP/Day";
+  }
+  
+  .teamRow {
+      .teamName {
+      display: block;
       }
   }
 }
@@ -504,7 +679,7 @@
       max-width: 40px;
       min-width: 30px;
       font-size: 10px;
-      border-right: 3px solid #07aae2;
+      border-right: 5px solid #07aae2;
       padding-left: 4px !important;
   }
 
@@ -521,7 +696,7 @@
 
   .scheduleGrid tr th:nth-child(9),
   .scheduleGrid tr td:nth-child(9) {
-      border-left: 3px solid #07aae2;
+      border-left: 5px solid #07aae2;
   }
 
   .scheduleGrid tr th:nth-child(9),
